--- a/views/404.html
+++ b/views/404.html
@@ -1,1 +1,53 @@
-<h1>Page not found</h1>
+<html>
+    <head>
+        <title>Not found</title>
+        <style>
+            body {
+                padding: 0;
+                margin: 0;
+                font-family: sans-serif;
+            }
+            main {
+                padding: 1rem;
+            }
+            .main-header {
+                width: 100%;
+                height: 3.5rem;
+                background-color: #ff6655;
+                padding: 0 1.5rem;
+            }
+            .main-header__item-list {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                display: flex;
+            }
+            .main-header__item {
+                margin: 0 1rem;
+                padding: 0;
+            }
+            .main-header__item a {
+                text-decoration: none;
+                color: black;
+            }
+            .main-header__item a:hover,
+            .main-header__item a:active,
+            .main-header__item a.active {
+                color: #6200ff;
+            }
+        </style>
+    </head>
+    <body>
+        <header class="main-header">
+            <nav class="main-header__nav">
+                <ul class="main-header__item-list">
+                    <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+                    <li class="main-header__item"><a href="/add-product">Add Product</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+        <h1>Page not found</h1>
+        </main>
+    </body>
+</html>
