--- a/views/shop.pug
+++ b/views/shop.pug
@@ -16,15 +16,18 @@ html(lang="en")
                     li.main-header__item
                         a(href="/admin/add-product") Add Product
         main
-            .grid
-                each product in prods
-                    article.card.product-item
-                        header.card__header
-                            h1.product__title #{product.title}
-                        div.card__image
-                            img(src="" alt="Picture")
-                        div.card__content
-                            h2.product__price $19.99
-                            p.product__description A very nice book
-                        .card__actions
-                            button.btn Add to Cart
+            if prods.length > 0
+                .grid
+                    each product in prods
+                        article.card.product-item
+                            header.card__header
+                                h1.product__title #{product.title}
+                            div.card__image
+                                img(src="" alt="Picture")
+                            div.card__content
+                                h2.product__price $19.99
+                                p.product__description A very nice book
+                            .card__actions
+                                button.btn Add to Cart
+            else
+                h1 No Products
